[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ipelago"
authors = [{name = "ahui", email = "102419@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
  "arrow",
  "click",
  "appdirs",
  "pyperclip",
  "result",
  "requests",
  "humanfriendly",
  "feedparser",
  "beautifulsoup4",
  "lxml",
  "Jinja2",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ahui2016/pypelago"

[project.scripts]
ago = "ipelago.main:cli"
