[metadata]
name = pypelago
version = attr: pypelago.__version__
author = ahui
author_email = 102419@gmail.com
description = pypelago: A pure CLI personal microblog
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahui2016/pypelago
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
python_requires = >=3.10
packages = find:

[options.packages.find]
where = src

[flake8]
ignore = E203, E501
